Fix alignment

--- a/sass/_large.scss
+++ b/sass/_large.scss
@@ -38,7 +38,6 @@ hr.menu-spacer {
   div:nth-child(2) {
     img {
       height: 250px;
-      margin-right: 35px;
     }
   }
 }
