--- a/sass/_medium.scss
+++ b/sass/_medium.scss
@@ -85,7 +85,6 @@ hr.menu-spacer {
       border-radius: 8px;
       filter:sepia(100%);
       float: right;
-      margin-right: 15px;
     }
   }
   .social-links {
